--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0a0a0c">
     <title>Page Not Found | AGSIST</title>
     <meta name="keywords" content="AGSIST, agriculture dashboard, page not found">
     <meta name="description" content="The page you requested could not be found. Return to the AGSIST agricultural dashboard.">
@@ -40,7 +41,7 @@
     <!-- Header -->
     <div id="header"></div>
 
-    <main>
+    <main id="main-content">
         <div class="error-page">
             <div class="error-code">404</div>
             <div class="error-msg">Page Not Found</div>
