--- a/ag-odds.html
+++ b/ag-odds.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0a0a0c">
     <title>Ag Odds & Outlook — What the Markets Are Saying | AGSIST</title>
     <meta name="description" content="Live prediction market odds on tariffs, trade war, Fed rates, and weather events that impact agriculture. See what the smart money thinks about farm policy.">
     <meta name="keywords" content="agriculture prediction markets, tariff odds, trade war agriculture, farm policy odds, USDA outlook, ag market predictions">
     <link rel="canonical" href="https://agsist.com/ag-odds.html">
     <meta property="og:title" content="Ag Odds & Outlook | AGSIST">
     <meta property="og:description" content="Live prediction market odds on events that move grain prices. Tariffs, trade policy, Fed rates — see what the smart money says.">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Ag Odds & Outlook | AGSIST">
+    <meta name="twitter:description" content="Live prediction market odds on events that move grain prices. Tariffs, trade policy, Fed rates — see what the smart money says.">
     <meta property="og:url" content="https://agsist.com/ag-odds.html">
     <meta property="og:type" content="website">
     <link rel="icon" href="/favicon.png">
@@ -147,7 +151,7 @@
 </head>
 <body>
     <div id="header"></div>
-    <main>
+    <main id="main-content">
         <nav class="breadcrumb"><a href="/">Home</a> → Ag Odds & Outlook</nav>
         
         <div class="page-intro">
@@ -337,7 +341,7 @@
                 url: 'https://www.agweb.com/news/policy',
                 vol: '--',
                 ends: 'Dec 2026',
-                impact: 'The 2018 Farm Bill has been extended twice. A new bill could update ARC/PLC reference prices, expand crop insurance, and address conservation compliance — all directly affecting your bottom line.'
+                impact: 'The 2018 Farm Bill has been extended twice. A new bill could update <span class=tip data-tip="Agriculture Risk Coverage / Price Loss Coverage">ARC/PLC</span> reference prices, expand crop insurance, and address conservation compliance — all directly affecting your bottom line.'
             },
             {
                 q: "Will USDA finalize higher RVO biofuel mandates?",
@@ -356,7 +360,7 @@
                 url: 'https://polymarket.com/predictions/politics',
                 vol: '$300K+',
                 ends: 'Dec 2026',
-                impact: 'Shutdowns delay USDA reports (WASDE, Crop Progress), FSA office services, and CRP/ARC/PLC payments. Extended shutdown in planting season is the nightmare scenario.'
+                impact: 'Shutdowns delay USDA reports (<span class=tip data-tip="World Ag Supply &amp; Demand Estimates">WASDE</span>, Crop Progress), <span class=tip data-tip="Farm Service Agency">FSA</span> office services, and <span class=tip data-tip="Conservation Reserve Program">CRP</span>/<span class=tip data-tip="Agriculture Risk Coverage / Price Loss Coverage">ARC/PLC</span> payments. Extended shutdown in planting season is the nightmare scenario.'
             }
         ],
         commodities: [
