--- a/calendar.html
+++ b/calendar.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0a0a0c">
     <title>USDA Report Calendar 2026 | AGSIST</title>
     <meta name="keywords" content="USDA report calendar, WASDE dates, crop progress schedule, grain stocks report, USDA report dates 2026">
     <meta name="description" content="Complete 2026 USDA agricultural report calendar. WASDE, Crop Progress, Grain Stocks, Prospective Plantings release dates with market impact ratings.">
     <link rel="canonical" href="https://agsist.com/calendar.html">
     <meta property="og:title" content="USDA Report Calendar 2026 | AGSIST">
     <meta property="og:description" content="Complete USDA report schedule with market impact ratings and release times.">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="USDA Report Calendar 2026 | AGSIST">
+    <meta name="twitter:description" content="Complete USDA report schedule with market impact ratings and release times.">
     <meta property="og:url" content="https://agsist.com/calendar.html">
     <meta property="og:type" content="website">
     <link rel="icon" href="/favicon.png">
@@ -69,7 +73,7 @@
 </head>
 <body>
     <div id="header"></div>
-    <main>
+    <main id="main-content">
         <nav class="breadcrumb"><a href="/">Home</a> → Calendar</nav>
         <div class="panel">
             <div class="panel-head"><h1>📅 USDA Report Calendar — 2026</h1></div>
@@ -88,14 +92,14 @@
             <div class="panel-head"><h2>📊 Report Guide</h2></div>
             <div class="panel-body">
                 <div class="guide-grid">
-                    <div class="guide-card"><h3>WASDE</h3><p>World Agricultural Supply & Demand Estimates. The most market-moving USDA report. Updates global production, ending stocks for all major commodities. Limit moves are common on release day.</p><div class="meta">Monthly ~12th · 12:00 PM ET · <a href="https://www.usda.gov/oce/commodity/wasde" target="_blank">Archive →</a></div></div>
-                    <div class="guide-card"><h3>Crop Progress</h3><p>Weekly planting, crop condition, and harvest progress. The "Good + Excellent" percentage is the key metric — below 60% signals trouble, above 70% is bearish. Runs April through November.</p><div class="meta">Mondays · 4:00 PM ET · <a href="https://usda.library.cornell.edu/concern/publications/8336h188j" target="_blank">Archive →</a></div></div>
-                    <div class="guide-card"><h3>Grain Stocks</h3><p>Quarterly on-farm and off-farm grain inventories. Often reveals tighter or looser stocks than the trade expects. September report sets final old-crop carryout.</p><div class="meta">Quarterly · 12:00 PM ET · <a href="https://usda.library.cornell.edu/concern/publications/xg94hp534" target="_blank">Archive →</a></div></div>
-                    <div class="guide-card"><h3>Prospective Plantings</h3><p>March survey of farmer planting intentions. First real signal of next crop year's supply picture. Corn vs soybean acreage split drives the spring price spread.</p><div class="meta">March 31 · 12:00 PM ET · <a href="https://usda.library.cornell.edu/concern/publications/x633f100h" target="_blank">Archive →</a></div></div>
-                    <div class="guide-card"><h3>Acreage Report</h3><p>June planted acreage update — often differs significantly from March intentions due to weather or prevented planting. A ±2M acre swing can trigger major repricing.</p><div class="meta">June 30 · 12:00 PM ET · <a href="https://usda.library.cornell.edu/concern/publications/j098zb09z" target="_blank">Archive →</a></div></div>
-                    <div class="guide-card"><h3>Crop Production</h3><p>Monthly yield and production estimates during growing season. August is the first field-based yield estimate and often the most volatile report of the year.</p><div class="meta">Monthly Aug-Jan · 12:00 PM ET · <a href="https://usda.library.cornell.edu/concern/publications/tm70mv177" target="_blank">Archive →</a></div></div>
-                    <div class="guide-card"><h3>Export Sales</h3><p>Weekly outstanding export sales and shipments. Flash sales (100K+ MT) reported within 24 hours. Tracks pace vs. USDA projections — key for demand-side price direction.</p><div class="meta">Thursdays · 8:30 AM ET · <a href="https://apps.fas.usda.gov/export-sales/" target="_blank">Archive →</a></div></div>
-                    <div class="guide-card"><h3>Cattle on Feed</h3><p>Monthly feedlot placement, marketing, and inventory. Pre-report estimates are widely traded. Surprises in placements drive cattle futures direction.</p><div class="meta">Monthly · 3:00 PM ET · <a href="https://usda.library.cornell.edu/concern/publications/m326m174z" target="_blank">Archive →</a></div></div>
+                    <div class="guide-card"><h3>WASDE</h3><p>World Agricultural Supply & Demand Estimates. The most market-moving USDA report. Updates global production, ending stocks for all major commodities. Limit moves are common on release day.</p><div class="meta">Monthly ~12th · 12:00 PM ET · <a href="https://www.usda.gov/oce/commodity/wasde" target="_blank" rel="noopener noreferrer">Archive →</a></div></div>
+                    <div class="guide-card"><h3>Crop Progress</h3><p>Weekly planting, crop condition, and harvest progress. The "Good + Excellent" percentage is the key metric — below 60% signals trouble, above 70% is bearish. Runs April through November.</p><div class="meta">Mondays · 4:00 PM ET · <a href="https://usda.library.cornell.edu/concern/publications/8336h188j" target="_blank" rel="noopener noreferrer">Archive →</a></div></div>
+                    <div class="guide-card"><h3>Grain Stocks</h3><p>Quarterly on-farm and off-farm grain inventories. Often reveals tighter or looser stocks than the trade expects. September report sets final old-crop carryout.</p><div class="meta">Quarterly · 12:00 PM ET · <a href="https://usda.library.cornell.edu/concern/publications/xg94hp534" target="_blank" rel="noopener noreferrer">Archive →</a></div></div>
+                    <div class="guide-card"><h3>Prospective Plantings</h3><p>March survey of farmer planting intentions. First real signal of next crop year's supply picture. Corn vs soybean acreage split drives the spring price spread.</p><div class="meta">March 31 · 12:00 PM ET · <a href="https://usda.library.cornell.edu/concern/publications/x633f100h" target="_blank" rel="noopener noreferrer">Archive →</a></div></div>
+                    <div class="guide-card"><h3>Acreage Report</h3><p>June planted acreage update — often differs significantly from March intentions due to weather or prevented planting. A ±2M acre swing can trigger major repricing.</p><div class="meta">June 30 · 12:00 PM ET · <a href="https://usda.library.cornell.edu/concern/publications/j098zb09z" target="_blank" rel="noopener noreferrer">Archive →</a></div></div>
+                    <div class="guide-card"><h3>Crop Production</h3><p>Monthly yield and production estimates during growing season. August is the first field-based yield estimate and often the most volatile report of the year.</p><div class="meta">Monthly Aug-Jan · 12:00 PM ET · <a href="https://usda.library.cornell.edu/concern/publications/tm70mv177" target="_blank" rel="noopener noreferrer">Archive →</a></div></div>
+                    <div class="guide-card"><h3>Export Sales</h3><p>Weekly outstanding export sales and shipments. Flash sales (100K+ MT) reported within 24 hours. Tracks pace vs. USDA projections — key for demand-side price direction.</p><div class="meta">Thursdays · 8:30 AM ET · <a href="https://apps.fas.usda.gov/export-sales/" target="_blank" rel="noopener noreferrer">Archive →</a></div></div>
+                    <div class="guide-card"><h3>Cattle on Feed</h3><p>Monthly feedlot placement, marketing, and inventory. Pre-report estimates are widely traded. Surprises in placements drive cattle futures direction.</p><div class="meta">Monthly · 3:00 PM ET · <a href="https://usda.library.cornell.edu/concern/publications/m326m174z" target="_blank" rel="noopener noreferrer">Archive →</a></div></div>
                 </div>
             </div>
         </div>
@@ -173,7 +177,8 @@
         var el = document.getElementById('reportList');
         if (!filtered.length) { el.innerHTML = '<div style="color:var(--dim);padding:20px;text-align:center">No major reports this month. Weekly Export Sales (Thursdays) and Crop Progress (Mondays Apr-Nov) continue.</div>'; updateStats(filtered); return; }
         el.innerHTML = filtered.map(function(r) {
-            return '<div class="report-row ' + r.impact + '"><div class="report-date">' + r.d + '</div><div><div class="report-name">' + r.name + '</div><div class="report-desc">' + r.desc + '</div></div><span class="impact ' + r.impact + '">' + r.impact.toUpperCase() + '</span><div class="report-time">' + r.time + '</div></div>';
+            var displayName = r.name === 'WASDE' ? '<span class="tip" data-tip="World Ag Supply &amp; Demand Estimates">WASDE</span>' : r.name;
+            return '<div class="report-row ' + r.impact + '"><div class="report-date">' + r.d + '</div><div><div class="report-name">' + displayName + '</div><div class="report-desc">' + r.desc + '</div></div><span class="impact ' + r.impact + '">' + r.impact.toUpperCase() + '</span><div class="report-time">' + r.time + '</div></div>';
         }).join('');
         updateStats(filtered);
     }
