--- a/tools.html
+++ b/tools.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0a0a0c">
     <title>Free Farm Tools, Data & Calculators | AGSIST</title>
     <meta name="keywords" content="farm tools, agriculture calculators, grain tools, farm dashboard tools, USDA tools">
     <meta name="description" content="Free farming tools: spray weather, drought monitor, USDA data, crop progress, export sales, soil survey, break-even calculator, and more.">
@@ -12,6 +13,9 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Agricultural Tools & Calculators | AGSIST">
     <meta property="og:description" content="Free farming tools: calculators, weather, soil data, market reports, and more.">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Agricultural Tools & Calculators | AGSIST">
+    <meta name="twitter:description" content="Free farming tools: calculators, weather, soil data, market reports, and more.">
     <meta property="og:url" content="https://agsist.com/tools.html">
     <meta property="og:type" content="website">
     <link rel="icon" href="/favicon.png">
@@ -58,7 +62,7 @@
 <body>
     <div id="header"></div>
 
-    <main>
+    <main id="main-content">
         <nav class="breadcrumb"><a href="/">Home</a> → All Tools</nav>
         <div class="panel">
             <div class="panel-head"><h1>🔧 AGSIST TOOLS & DATA</h1></div>
@@ -85,11 +89,11 @@
                     </div>
                     <div class="tool-card">
                         <h3>🌾 Crop Progress</h3>
-                        <p>USDA crop progress data: planting, emergence, condition ratings. Links to latest NASS reports by state.</p>
+                        <p>USDA crop progress data: planting, emergence, condition ratings. Links to latest <span class="tip" data-tip="National Agricultural Statistics Service">NASS</span> reports by state.</p>
                         <a href="/crop-progress.html">View Progress →</a>
                     </div>
                     <div class="tool-card">
-                        <h3>🌡️ GDU Calculator</h3>
+                        <h3>🌡️ <span class="tip" data-tip="Growing Degree Units — heat accumulation for crop staging">GDU</span> Calculator</h3>
                         <p>Track growing degree units, estimate silking dates, and monitor corn development stages.</p>
                         <a href="/gdu.html">Open Tool →</a>
                     </div>
@@ -105,7 +109,7 @@
                     </div>
                     <div class="tool-card">
                         <h3>📰 Market News</h3>
-                        <p>USDA AMS market reports: grain, dairy, livestock. Direct links to latest official market news data.</p>
+                        <p>USDA <span class="tip" data-tip="Agricultural Marketing Service">AMS</span> market reports: grain, dairy, livestock. Direct links to latest official market news data.</p>
                         <a href="/market-news.html">View Reports →</a>
                     </div>
                     <div class="tool-card">
@@ -120,7 +124,7 @@
                 <div class="tool-grid">
                     <div class="tool-card featured">
                         <h3>📊 USDA Quick Stats</h3>
-                        <p>Build queries to official USDA NASS database: yields, production, livestock, and land values by state and county.</p>
+                        <p>Build queries to official USDA <span class="tip" data-tip="National Agricultural Statistics Service">NASS</span> database: yields, production, livestock, and land values by state and county.</p>
                         <a href="/quickstats.html">Explore Data →</a>
                     </div>
                     <div class="tool-card featured">
@@ -130,12 +134,12 @@
                     </div>
                     <div class="tool-card">
                         <h3>🗺️ Soil Survey</h3>
-                        <p>Look up soil types, drainage class, productivity ratings. Links to USDA NRCS Web Soil Survey.</p>
+                        <p>Look up soil types, drainage class, productivity ratings. Links to USDA <span class="tip" data-tip="Natural Resources Conservation Service">NRCS</span> Web Soil Survey.</p>
                         <a href="/soils.html">Lookup Soils →</a>
                     </div>
                     <div class="tool-card">
                         <h3>🎓 Farmdoc Tools</h3>
-                        <p>U of Illinois crop insurance calculators, ARC/PLC tools, price distribution, and 50+ Excel tools.</p>
+                        <p>U of Illinois crop insurance calculators, <span class="tip" data-tip="Agriculture Risk Coverage / Price Loss Coverage">ARC/PLC</span> tools, price distribution, and 50+ Excel tools.</p>
                         <a href="/farmdoc.html">View Tools →</a>
                     </div>
                 </div>
@@ -160,12 +164,12 @@
                 <div class="tool-grid">
                     <div class="tool-card">
                         <h3>📅 USDA Calendar</h3>
-                        <p>Track USDA report release dates: WASDE, Crop Progress, Grain Stocks, Cattle on Feed, and more.</p>
+                        <p>Track USDA report release dates: <span class="tip" data-tip="World Ag Supply &amp; Demand Estimates">WASDE</span>, Crop Progress, Grain Stocks, Cattle on Feed, and more.</p>
                         <a href="/calendar.html">View Calendar →</a>
                     </div>
                     <div class="tool-card">
                         <h3>🏛️ Office Finder</h3>
-                        <p>Find your local USDA Service Center, FSA office, and NRCS contacts by state.</p>
+                        <p>Find your local USDA Service Center, <span class="tip" data-tip="Farm Service Agency">FSA</span> office, and <span class="tip" data-tip="Natural Resources Conservation Service">NRCS</span> contacts by state.</p>
                         <a href="/offices.html">Find Office →</a>
                     </div>
                     <div class="tool-card">
