--- a/exports.html
+++ b/exports.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Export Sales Tracker | AGSIST</title>
+    <meta name="theme-color" content="#0a0a0c">
+    <title>US Grain Export Sales Tracker — Weekly USDA Data | AGSIST</title>
     <meta name="keywords" content="grain exports, US corn exports, soybean exports, wheat exports, export sales report, FAS data">
     <meta name="description" content="USDA export sales data for corn, soybeans, wheat. Weekly reports, top buying countries, marketing year tracking, and how exports affect local grain prices.">
     <link rel="canonical" href="https://agsist.com/exports.html">
@@ -11,6 +12,9 @@
     <!-- Open Graph -->
     <meta property="og:title" content="US Grain Export Guide | AGSIST">
     <meta property="og:description" content="US grain export data for corn, soybeans, wheat. Top buyers, market impact, weekly reports.">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="US Grain Export Guide | AGSIST">
+    <meta name="twitter:description" content="US grain export data for corn, soybeans, wheat. Top buyers, market impact, weekly reports.">
     <meta property="og:url" content="https://agsist.com/exports.html">
     <meta property="og:type" content="website">
     <link rel="icon" href="/favicon.png">
@@ -108,7 +112,7 @@
 </head>
 <body>
     <div id="header"></div>
-    <main>
+    <main id="main-content">
         <nav class="breadcrumb"><a href="/">Home</a> → <a href="/tools.html">Tools</a> → Export Sales</nav>
 
         <div class="hero">
@@ -128,7 +132,7 @@
             <div class="commodity-hero" style="background:linear-gradient(135deg,var(--card) 0%,#1a1500 100%);border:1px solid var(--accent);border-radius:10px;">
                 <div class="icon">🌽</div>
                 <div><h3>Corn Exports</h3><div class="detail">Marketing Year: Sep 1 - Aug 31 • US exports ~2.4 billion bushels annually (~15% of production)</div></div>
-                <a href="https://apps.fas.usda.gov/export-sales/esrd1.html" target="_blank" class="cta">View Weekly Data →</a>
+                <a href="https://apps.fas.usda.gov/export-sales/esrd1.html" target="_blank" rel="noopener noreferrer" class="cta">View Weekly Data →</a>
             </div>
             <div class="two-col">
                 <div class="panel"><div class="panel-head"><h2>🌍 Top Corn Buyers</h2></div><div class="panel-body">
@@ -155,7 +159,7 @@
             <div class="commodity-hero" style="background:linear-gradient(135deg,var(--card) 0%,#0a1a0a 100%);border:1px solid #22c55e;border-radius:10px;">
                 <div class="icon">🫘</div>
                 <div><h3>Soybean Exports</h3><div class="detail">Marketing Year: Sep 1 - Aug 31 • US exports ~1.7 billion bushels annually (~40% of production)</div></div>
-                <a href="https://apps.fas.usda.gov/export-sales/esrd1.html" target="_blank" class="cta">View Weekly Data →</a>
+                <a href="https://apps.fas.usda.gov/export-sales/esrd1.html" target="_blank" rel="noopener noreferrer" class="cta">View Weekly Data →</a>
             </div>
             <div class="two-col">
                 <div class="panel"><div class="panel-head"><h2>🌍 Top Soybean Buyers</h2></div><div class="panel-body">
@@ -182,7 +186,7 @@
             <div class="commodity-hero" style="background:linear-gradient(135deg,var(--card) 0%,#1a0a00 100%);border:1px solid #f97316;border-radius:10px;">
                 <div class="icon">🌾</div>
                 <div><h3>Wheat Exports</h3><div class="detail">Marketing Year: Jun 1 - May 31 • US exports ~800 million bushels annually (~40-50% of production)</div></div>
-                <a href="https://apps.fas.usda.gov/export-sales/esrd1.html" target="_blank" class="cta">View Weekly Data →</a>
+                <a href="https://apps.fas.usda.gov/export-sales/esrd1.html" target="_blank" rel="noopener noreferrer" class="cta">View Weekly Data →</a>
             </div>
             <div class="two-col">
                 <div class="panel"><div class="panel-head"><h2>🌍 Top Wheat Buyers</h2></div><div class="panel-body">
@@ -195,8 +199,8 @@
                     </div>
                 </div></div>
                 <div class="panel"><div class="panel-head"><h2>📋 Key Wheat Export Facts</h2></div><div class="panel-body">
-                    <div class="stat-row"><span class="lbl">US Export Classes</span><span class="val">HRW, SRW, HRS, SW, Durum</span></div>
-                    <div class="stat-row"><span class="lbl">Gulf vs PNW</span><span class="val">HRW=Gulf, HRS/SW=PNW</span></div>
+                    <div class="stat-row"><span class="lbl">US Export Classes</span><span class="val"><span class="tip" data-tip="Hard Red Winter">HRW</span>, <span class="tip" data-tip="Soft Red Winter">SRW</span>, <span class="tip" data-tip="Hard Red Spring">HRS</span>, SW, Durum</span></div>
+                    <div class="stat-row"><span class="lbl">Gulf vs PNW</span><span class="val"><span class="tip" data-tip="Hard Red Winter">HRW</span>=Gulf, <span class="tip" data-tip="Hard Red Spring">HRS</span>/SW=PNW</span></div>
                     <div class="stat-row"><span class="lbl">Global Competitors</span><span class="val">🇷🇺 Russia, 🇨🇦 Canada, 🇦🇺 Aus</span></div>
                     <div class="stat-row"><span class="lbl">US Global Share</span><span class="val">~12% (was 30% in 1990s)</span></div>
                     <div class="stat-row"><span class="lbl">Peak Shipments</span><span class="val">Jul-Dec (post-harvest)</span></div>
@@ -250,10 +254,10 @@
             <div class="panel-head"><h2>📄 Weekly Export Reports</h2><span class="badge">Official USDA FAS</span></div>
             <div class="panel-body">
                 <div class="report-grid">
-                    <a href="https://apps.fas.usda.gov/export-sales/esrd1.html" target="_blank" class="report-card"><div class="icon">📄</div><h3>Weekly Export Sales</h3><p>Current week net sales & shipments</p><span class="action">View Report →</span></a>
-                    <a href="https://apps.fas.usda.gov/export-sales/myrpt-mg.html" target="_blank" class="report-card"><div class="icon">📈</div><h3>Marketing Year Totals</h3><p>Cumulative sales vs USDA projection</p><span class="action">View Report →</span></a>
-                    <a href="https://apps.fas.usda.gov/export-sales/outstanding.html" target="_blank" class="report-card"><div class="icon">📋</div><h3>Outstanding Sales</h3><p>Unshipped commitments by country</p><span class="action">View Report →</span></a>
-                    <a href="https://apps.fas.usda.gov/export-sales/highlights.html" target="_blank" class="report-card"><div class="icon">⚡</div><h3>Sales Highlights</h3><p>Flash sales & notable transactions</p><span class="action">View Report →</span></a>
+                    <a href="https://apps.fas.usda.gov/export-sales/esrd1.html" target="_blank" rel="noopener noreferrer" class="report-card"><div class="icon">📄</div><h3>Weekly Export Sales</h3><p>Current week net sales & shipments</p><span class="action">View Report →</span></a>
+                    <a href="https://apps.fas.usda.gov/export-sales/myrpt-mg.html" target="_blank" rel="noopener noreferrer" class="report-card"><div class="icon">📈</div><h3>Marketing Year Totals</h3><p>Cumulative sales vs USDA projection</p><span class="action">View Report →</span></a>
+                    <a href="https://apps.fas.usda.gov/export-sales/outstanding.html" target="_blank" rel="noopener noreferrer" class="report-card"><div class="icon">📋</div><h3>Outstanding Sales</h3><p>Unshipped commitments by country</p><span class="action">View Report →</span></a>
+                    <a href="https://apps.fas.usda.gov/export-sales/highlights.html" target="_blank" rel="noopener noreferrer" class="report-card"><div class="icon">⚡</div><h3>Sales Highlights</h3><p>Flash sales & notable transactions</p><span class="action">View Report →</span></a>
                 </div>
                 <div class="info-box" style="margin-top:16px;">
                     <strong>📅 Report Schedule:</strong> Export Sales reports release every <strong>Thursday at 8:30 AM ET</strong>, covering the prior Friday-Thursday week. Flash sales (100,000+ MT to one destination) are reported within 24 hours.
@@ -266,10 +270,10 @@
             <div class="panel-head"><h2>🔗 Trade Data Resources</h2></div>
             <div class="panel-body">
                 <div class="links-grid">
-                    <a href="https://apps.fas.usda.gov/gats/default.aspx" target="_blank" class="ext-link"><strong>GATS Trade Data</strong><span>Country-by-country trade flows</span></a>
-                    <a href="https://apps.fas.usda.gov/psdonline/app/index.html" target="_blank" class="ext-link"><strong>PSD Online</strong><span>World supply & demand by country</span></a>
-                    <a href="https://ipad.fas.usda.gov/" target="_blank" class="ext-link"><strong>Crop Explorer</strong><span>Global crop conditions</span></a>
-                    <a href="https://www.fas.usda.gov/data/search" target="_blank" class="ext-link"><strong>FAS Data Search</strong><span>All FAS datasets</span></a>
+                    <a href="https://apps.fas.usda.gov/gats/default.aspx" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>GATS Trade Data</strong><span>Country-by-country trade flows</span></a>
+                    <a href="https://apps.fas.usda.gov/psdonline/app/index.html" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>PSD Online</strong><span>World supply & demand by country</span></a>
+                    <a href="https://ipad.fas.usda.gov/" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>Crop Explorer</strong><span>Global crop conditions</span></a>
+                    <a href="https://www.fas.usda.gov/data/search" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>FAS Data Search</strong><span>All FAS datasets</span></a>
                 </div>
             </div>
         </div>
