--- a/market-news.html
+++ b/market-news.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#0a0a0c">
     <title>USDA Market News Reports | AGSIST</title>
     <meta name="keywords" content="USDA market news, grain market reports, dairy prices, livestock auctions, AMS reports">
     <meta name="description" content="Official USDA AMS market news reports. Grain cash prices, dairy, livestock auction results organized by region. Find your local market reports.">
@@ -11,6 +12,9 @@
     <!-- Open Graph -->
     <meta property="og:title" content="USDA Market News Reports | AGSIST">
     <meta property="og:description" content="USDA AMS market reports for grain, dairy, and livestock. Personalized by region.">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="USDA Market News Reports | AGSIST">
+    <meta name="twitter:description" content="USDA AMS market reports for grain, dairy, and livestock. Personalized by region.">
     <meta property="og:url" content="https://agsist.com/market-news.html">
     <meta property="og:type" content="website">
     <link rel="icon" href="/favicon.png">
@@ -94,7 +98,7 @@
 </head>
 <body>
     <div id="header"></div>
-    <main>
+    <main id="main-content">
         <nav class="breadcrumb"><a href="/">Home</a> → <a href="/tools.html">Tools</a> → Market News</nav>
 
         <div class="hero">
@@ -104,7 +108,7 @@
 
         <div class="state-bar">
             <label>Your State:</label>
-            <select id="stateSelect"></select>
+            <select id="stateSelect" aria-label="Select state"></select>
             <button class="detect-btn" onclick="detectMyLocation()">📍 Detect</button>
             <span class="region-badge" id="regionBadge">Upper Midwest</span>
         </div>
@@ -129,10 +133,10 @@
                 <div class="panel-head"><h2>🌾 National Grain Reports</h2></div>
                 <div class="panel-body">
                     <div class="report-grid">
-                        <a href="https://www.ams.usda.gov/market-news/state-grain-reports" target="_blank" class="report-card"><h3>🌽 State Grain Bids</h3><p>Daily cash grain bids by state (corn, beans, wheat)</p><span class="action">View Reports →</span></a>
-                        <a href="https://www.ams.usda.gov/market-news/national-grain-reports" target="_blank" class="report-card"><h3>🌾 National Grain Reports</h3><p>National grain summaries, transport, ethanol</p><span class="action">View Reports →</span></a>
-                        <a href="https://mpr.datamart.ams.usda.gov/" target="_blank" class="report-card"><h3>📊 USDA MPR Datamart</h3><p>Searchable mandatory price reports for all commodities</p><span class="action">View Database →</span></a>
-                        <a href="https://www.ams.usda.gov/market-news/livestock-poultry-grain" target="_blank" class="report-card"><h3>📋 LP&G Market News</h3><p>Livestock, poultry & grain market news hub</p><span class="action">View Reports →</span></a>
+                        <a href="https://www.ams.usda.gov/market-news/state-grain-reports" target="_blank" rel="noopener noreferrer" class="report-card"><h3>🌽 State Grain Bids</h3><p>Daily cash grain bids by state (corn, beans, wheat)</p><span class="action">View Reports →</span></a>
+                        <a href="https://www.ams.usda.gov/market-news/national-grain-reports" target="_blank" rel="noopener noreferrer" class="report-card"><h3>🌾 National Grain Reports</h3><p>National grain summaries, transport, ethanol</p><span class="action">View Reports →</span></a>
+                        <a href="https://mpr.datamart.ams.usda.gov/" target="_blank" rel="noopener noreferrer" class="report-card"><h3>📊 USDA MPR Datamart</h3><p>Searchable mandatory price reports for all commodities</p><span class="action">View Database →</span></a>
+                        <a href="https://www.ams.usda.gov/market-news/livestock-poultry-grain" target="_blank" rel="noopener noreferrer" class="report-card"><h3>📋 LP&G Market News</h3><p>Livestock, poultry & grain market news hub</p><span class="action">View Reports →</span></a>
                     </div>
                 </div>
             </div>
@@ -151,9 +155,9 @@
                 <div class="panel-head"><h2>🥛 National Dairy Reports</h2></div>
                 <div class="panel-body">
                     <div class="report-grid">
-                        <a href="https://www.ams.usda.gov/market-news/dairy" target="_blank" class="report-card"><h3>🧀 National Dairy Reports</h3><p>All dairy product prices and production data</p><span class="action">View Reports →</span></a>
-                        <a href="https://www.ams.usda.gov/market-news/search-market-news" target="_blank" class="report-card"><h3>🔍 Search AMS Reports</h3><p>Search all USDA market news reports by keyword</p><span class="action">Search →</span></a>
-                        <a href="https://mymarketnews.ams.usda.gov/public_data" target="_blank" class="report-card"><h3>📊 Market News Database</h3><p>Searchable dairy, grain & livestock data</p><span class="action">View Database →</span></a>
+                        <a href="https://www.ams.usda.gov/market-news/dairy" target="_blank" rel="noopener noreferrer" class="report-card"><h3>🧀 National Dairy Reports</h3><p>All dairy product prices and production data</p><span class="action">View Reports →</span></a>
+                        <a href="https://www.ams.usda.gov/market-news/search-market-news" target="_blank" rel="noopener noreferrer" class="report-card"><h3>🔍 Search AMS Reports</h3><p>Search all USDA market news reports by keyword</p><span class="action">Search →</span></a>
+                        <a href="https://mymarketnews.ams.usda.gov/public_data" target="_blank" rel="noopener noreferrer" class="report-card"><h3>📊 Market News Database</h3><p>Searchable dairy, grain & livestock data</p><span class="action">View Database →</span></a>
                         <a href="/milk-prices.html" class="report-card"><h3>🥛 AGSIST Milk Dashboard</h3><p>Class III/IV prices, cheese, butter trends</p><span class="action">Open Dashboard →</span></a>
                     </div>
                     <div class="info-box" style="margin-top:16px;">
@@ -169,18 +173,18 @@
                         <div class="region-card" id="dairy-upper-mw">
                             <h4>Upper Midwest</h4>
                             <div class="states">WI, MN, IA, SD, ND</div>
-                            <a href="https://mymarketnews.ams.usda.gov/viewReport/2998" target="_blank">→ Upper Midwest Dairy</a>
-                            <a href="https://mymarketnews.ams.usda.gov/viewReport/2984" target="_blank">→ Central Cheese Report</a>
+                            <a href="https://mymarketnews.ams.usda.gov/viewReport/2998" target="_blank" rel="noopener noreferrer">→ Upper Midwest Dairy</a>
+                            <a href="https://mymarketnews.ams.usda.gov/viewReport/2984" target="_blank" rel="noopener noreferrer">→ Central Cheese Report</a>
                         </div>
                         <div class="region-card">
                             <h4>Northeast</h4>
                             <div class="states">NY, PA, VT, ME</div>
-                            <a href="https://mymarketnews.ams.usda.gov/viewReport/2997" target="_blank">→ Northeast Dairy</a>
+                            <a href="https://mymarketnews.ams.usda.gov/viewReport/2997" target="_blank" rel="noopener noreferrer">→ Northeast Dairy</a>
                         </div>
                         <div class="region-card">
                             <h4>West</h4>
                             <div class="states">CA, ID, WA</div>
-                            <a href="https://mymarketnews.ams.usda.gov/viewReport/2995" target="_blank">→ Western Dairy</a>
+                            <a href="https://mymarketnews.ams.usda.gov/viewReport/2995" target="_blank" rel="noopener noreferrer">→ Western Dairy</a>
                         </div>
                     </div>
                 </div>
@@ -193,9 +197,9 @@
                 <div class="panel-head"><h2>🐄 National Livestock Reports</h2></div>
                 <div class="panel-body">
                     <div class="report-grid">
-                        <a href="https://www.ams.usda.gov/market-news/livestock-poultry-grain" target="_blank" class="report-card"><h3>🐄 Livestock & Poultry</h3><p>USDA AMS livestock, poultry & grain hub</p><span class="action">View Reports →</span></a>
-                        <a href="https://mpr.datamart.ams.usda.gov/" target="_blank" class="report-card"><h3>📊 Mandatory Price Reports</h3><p>Cattle, hog, lamb mandatory price data</p><span class="action">View Datamart →</span></a>
-                        <a href="https://mymarketnews.ams.usda.gov/filerepo/reports" target="_blank" class="report-card"><h3>📁 AMS Report Archive</h3><p>Search all published USDA reports</p><span class="action">Search Reports →</span></a>
+                        <a href="https://www.ams.usda.gov/market-news/livestock-poultry-grain" target="_blank" rel="noopener noreferrer" class="report-card"><h3>🐄 Livestock & Poultry</h3><p>USDA AMS livestock, poultry & grain hub</p><span class="action">View Reports →</span></a>
+                        <a href="https://mpr.datamart.ams.usda.gov/" target="_blank" rel="noopener noreferrer" class="report-card"><h3>📊 Mandatory Price Reports</h3><p>Cattle, hog, lamb mandatory price data</p><span class="action">View Datamart →</span></a>
+                        <a href="https://mymarketnews.ams.usda.gov/filerepo/reports" target="_blank" rel="noopener noreferrer" class="report-card"><h3>📁 AMS Report Archive</h3><p>Search all published USDA reports</p><span class="action">Search Reports →</span></a>
                         <a href="/" class="report-card"><h3>💹 AGSIST Live Prices</h3><p>Live cattle, feeder, lean hog futures</p><span class="action">View Dashboard →</span></a>
                     </div>
                 </div>
@@ -283,12 +287,12 @@
 
             // Your region reports
             const yourReports = `
-                <a href="https://mymarketnews.ams.usda.gov/viewReport/${region.grain}" target="_blank" class="report-card your-region">
+                <a href="https://mymarketnews.ams.usda.gov/viewReport/${region.grain}" target="_blank" rel="noopener noreferrer" class="report-card your-region">
                     <h3>🌾 ${region.name} Grain Summary</h3>
                     <p>Cash prices, basis for ${region.states.join(', ')}</p>
                     <span class="action">View Report →</span>
                 </a>
-                ${livestockAuctions[currentState] ? `<a href="https://mymarketnews.ams.usda.gov/filerepo/reports?field_slug_id=${livestockAuctions[currentState].id}" target="_blank" class="report-card your-region">
+                ${livestockAuctions[currentState] ? `<a href="https://mymarketnews.ams.usda.gov/filerepo/reports?field_slug_id=${livestockAuctions[currentState].id}" target="_blank" rel="noopener noreferrer" class="report-card your-region">
                     <h3>🐄 ${livestockAuctions[currentState].name} Livestock Auctions</h3>
                     <p>Weekly auction results</p>
                     <span class="action">View Report →</span>
@@ -307,7 +311,7 @@
                 return `<div class="region-card ${isYours ? 'your-region' : ''}">
                     <h4>${isYours ? '📍 ' : ''}${r.name}</h4>
                     <div class="states">${r.states.join(', ')}</div>
-                    <a href="https://mymarketnews.ams.usda.gov/viewReport/${r.grain}" target="_blank">→ Grain Summary</a>
+                    <a href="https://mymarketnews.ams.usda.gov/viewReport/${r.grain}" target="_blank" rel="noopener noreferrer">→ Grain Summary</a>
                 </div>`;
             }).join('');
             document.getElementById('grainRegions').innerHTML = allRegions;
@@ -319,7 +323,7 @@
                     const isYours = abbr === currentState;
                     return `<div class="region-card ${isYours ? 'your-region' : ''}">
                         <h4>${isYours ? '📍 ' : ''}${info.name}</h4>
-                        <a href="https://mymarketnews.ams.usda.gov/filerepo/reports?field_slug_id=${info.id}" target="_blank">→ Weekly Livestock Auctions</a>
+                        <a href="https://mymarketnews.ams.usda.gov/filerepo/reports?field_slug_id=${info.id}" target="_blank" rel="noopener noreferrer">→ Weekly Livestock Auctions</a>
                     </div>`;
                 }).join('');
             document.getElementById('livestockRegions').innerHTML = lsRegions;
