--- a/soils.html
+++ b/soils.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soil Survey Lookup | AGSIST</title>
+    <meta name="theme-color" content="#0a0a0c">
+    <title>Soil Survey Lookup — NRCS Web Soil Survey Tool | AGSIST</title>
     <meta name="keywords" content="soil data, NRCS soil survey, web soil survey, drainage class, hydrologic group, farmland classification">
     <meta name="description" content="Look up soil types, drainage class, productivity ratings, and crop suitability from USDA NRCS soil data. Enter any address or GPS coordinates.">
     <link rel="canonical" href="https://agsist.com/soils.html">
@@ -11,6 +12,9 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Soil Data Lookup | AGSIST">
     <meta property="og:description" content="Live NRCS soil data by location. Drainage, texture, hydrologic group, farmland class.">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Soil Data Lookup | AGSIST">
+    <meta name="twitter:description" content="Live NRCS soil data by location. Drainage, texture, hydrologic group, farmland class.">
     <meta property="og:url" content="https://agsist.com/soils.html">
     <meta property="og:type" content="website">
     <link rel="icon" href="/favicon.png">
@@ -116,7 +120,7 @@
 </head>
 <body>
     <div id="header"></div>
-    <main>
+    <main id="main-content">
         <nav class="breadcrumb"><a href="/">Home</a> → <a href="/tools.html">Tools</a> → Soil Survey</nav>
 
         <div class="hero">
@@ -147,7 +151,7 @@
                         <div class="coords" id="coordsDisplay">
                             <div class="coord">Lat: <span id="latVal">--</span></div>
                             <div class="coord">Lon: <span id="lonVal">--</span></div>
-                            <a href="#" id="wssLink" target="_blank" style="margin-left:auto;color:var(--accent);font-size:0.85rem;">Open in Web Soil Survey →</a>
+                            <a href="#" id="wssLink" target="_blank" rel="noopener noreferrer" style="margin-left:auto;color:var(--accent);font-size:0.85rem;">Open in Web Soil Survey →</a>
                         </div>
 
                         <div class="soil-grid" id="soilSummary"></div>
@@ -244,10 +248,10 @@
             <div class="panel-head"><h2>🔗 Soil Resources</h2></div>
             <div class="panel-body">
                 <div class="links-grid">
-                    <a href="https://websoilsurvey.nrcs.usda.gov/app/" target="_blank" class="ext-link"><strong>Web Soil Survey</strong><span>Official NRCS mapping tool</span></a>
-                    <a href="https://www.nrcs.usda.gov/resources/data-and-reports/soil-survey-geographic-database-ssurgo" target="_blank" class="ext-link"><strong>SSURGO Database</strong><span>Downloadable soil data</span></a>
-                    <a href="https://casoilresource.lawr.ucdavis.edu/gmap/" target="_blank" class="ext-link"><strong>SoilWeb</strong><span>UC Davis interactive map</span></a>
-                    <a href="https://www.nrcs.usda.gov/conservation-basics/natural-resource-concerns/soils" target="_blank" class="ext-link"><strong>NRCS Soil Health</strong><span>Management guides</span></a>
+                    <a href="https://websoilsurvey.nrcs.usda.gov/app/" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>Web Soil Survey</strong><span>Official NRCS mapping tool</span></a>
+                    <a href="https://www.nrcs.usda.gov/resources/data-and-reports/soil-survey-geographic-database-ssurgo" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>SSURGO Database</strong><span>Downloadable soil data</span></a>
+                    <a href="https://casoilresource.lawr.ucdavis.edu/gmap/" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>SoilWeb</strong><span>UC Davis interactive map</span></a>
+                    <a href="https://www.nrcs.usda.gov/conservation-basics/natural-resource-concerns/soils" target="_blank" rel="noopener noreferrer" class="ext-link"><strong>NRCS Soil Health</strong><span>Management guides</span></a>
                 </div>
             </div>
         </div>
@@ -355,7 +359,7 @@
                 document.getElementById('soilTable').innerHTML = `
                     <div style="text-align:center;padding:20px;color:var(--dim);">
                         <p>No soil data found for this location. This may be an urban area, water body, or unmapped location.</p>
-                        <a href="https://websoilsurvey.nrcs.usda.gov/app/" target="_blank" style="display:inline-block;margin-top:12px;padding:12px 20px;background:var(--accent);color:#000;border-radius:6px;text-decoration:none;font-weight:600;">Try Web Soil Survey →</a>
+                        <a href="https://websoilsurvey.nrcs.usda.gov/app/" target="_blank" rel="noopener noreferrer" style="display:inline-block;margin-top:12px;padding:12px 20px;background:var(--accent);color:#000;border-radius:6px;text-decoration:none;font-weight:600;">Try Web Soil Survey →</a>
                     </div>`;
             }
         }
@@ -374,7 +378,7 @@
             document.getElementById('soilTable').innerHTML = `
                 <div style="text-align:center;padding:30px;color:var(--dim);">
                     <p style="margin-bottom:12px;">NRCS Soil Data Access API is temporarily unavailable. Use the official tool:</p>
-                    <a href="https://websoilsurvey.nrcs.usda.gov/app/" target="_blank" style="display:inline-block;padding:14px 24px;background:var(--accent);color:#000;border-radius:6px;text-decoration:none;font-weight:600;">Open Web Soil Survey →</a>
+                    <a href="https://websoilsurvey.nrcs.usda.gov/app/" target="_blank" rel="noopener noreferrer" style="display:inline-block;padding:14px 24px;background:var(--accent);color:#000;border-radius:6px;text-decoration:none;font-weight:600;">Open Web Soil Survey →</a>
                     <p style="margin-top:12px;font-size:0.8rem;">Coordinates: ${currentLat.toFixed(5)}, ${currentLon.toFixed(5)}</p>
                 </div>`;
         }
